services section added

--- a/index.html
+++ b/index.html
@@ -118,6 +118,48 @@
     <!-- /////////////////////////////////// -->
     <!-- Services section -->
     <!-- /////////////////////////////////// -->
-    <section class="section-services container"></section>
+    <section class="section-services container">
+      <h2 class="services-heading">services &mdash; plans for everyone</h2>
+      <div class="container grid grid--3-cols">
+        <div class="services-items">
+          <h3>basic</h3>
+          <ul class="services-list">
+            <li class="services">Home Page</li>
+            <li class="services">Contact form</li>
+            <li class="services">3 content pages</li>
+            <li class="services">Mobile friendly</li>
+          </ul>
+          <div class="price-box">
+            <p>From: <span class="price">N&dollar;7000</span></p>
+          </div>
+        </div>
+        <div class="services-items">
+          <h3>standard</h3>
+          <ul class="services-list">
+            <li class="services">Home Page</li>
+            <li class="services">Contact form</li>
+            <li class="services">5 content pages</li>
+            <li class="services">Mobile friendly</li>
+          </ul>
+          <div class="price-box">
+            <p>From: <span class="price">N&dollar;7000</span></p>
+          </div>
+        </div>
+        <div class="services-items">
+          <h3>premium</h3>
+          <ul class="services-list">
+            <li class="services">Home Page</li>
+            <li class="services">Contact form</li>
+            <li class="services">8 content pages</li>
+            <li class="services">Mobile friendly</li>
+          </ul>
+          <div class="price-box">
+            <p>From: <span class="price">N&dollar;7000</span></p>
+          </div>
+        </div>
+      </div>
+      <p>need something else?</p>
+      <a href="#" class="contact-btn">contact me</a>
+    </section>
   </body>
 </html>
