previous work section added

--- a/index.html
+++ b/index.html
@@ -118,48 +118,134 @@
     <!-- /////////////////////////////////// -->
     <!-- Services section -->
     <!-- /////////////////////////////////// -->
-    <section class="section-services container">
-      <h2 class="services-heading">services &mdash; plans for everyone</h2>
-      <div class="container grid grid--3-cols">
-        <div class="services-items">
-          <h3>basic</h3>
-          <ul class="services-list">
-            <li class="services">Home Page</li>
-            <li class="services">Contact form</li>
-            <li class="services">3 content pages</li>
-            <li class="services">Mobile friendly</li>
-          </ul>
-          <div class="price-box">
-            <p>From: <span class="price">N&dollar;7000</span></p>
+    <section class="section-services">
+      <div class="container services-box">
+        <h2 class="services-heading">services &mdash; plans for everyone</h2>
+        <div class="services-grid grid grid--3-cols">
+          <div class="services-items">
+            <h3>basic</h3>
+            <div class="price-box">
+              <p>Starting at: <span class="price">N&dollar;7000</span></p>
+            </div>
+
+            <ul class="services-list">
+              <li class="services">Home Page</li>
+              <li class="services">Contact form</li>
+              <li class="services">3 content pages</li>
+              <li class="services">Mobile friendly</li>
+            </ul>
+          </div>
+          <div class="services-items">
+            <h3>standard</h3>
+            <div class="price-box">
+              <p>Starting at: <span class="price">N&dollar;7000</span></p>
+            </div>
+            <ul class="services-list">
+              <li class="services">Home Page</li>
+              <li class="services">Contact form</li>
+              <li class="services">5 content pages</li>
+              <li class="services">Mobile friendly</li>
+            </ul>
+          </div>
+          <div class="services-items">
+            <h3>premium</h3>
+            <div class="price-box">
+              <p>Starting at: <span class="price">N&dollar;7000</span></p>
+            </div>
+            <ul class="services-list">
+              <li class="services">Home Page</li>
+              <li class="services">Contact form</li>
+              <li class="services">8 content pages</li>
+              <li class="services">Mobile friendly</li>
+            </ul>
           </div>
         </div>
-        <div class="services-items">
-          <h3>standard</h3>
-          <ul class="services-list">
-            <li class="services">Home Page</li>
-            <li class="services">Contact form</li>
-            <li class="services">5 content pages</li>
-            <li class="services">Mobile friendly</li>
-          </ul>
-          <div class="price-box">
-            <p>From: <span class="price">N&dollar;7000</span></p>
-          </div>
-        </div>
-        <div class="services-items">
-          <h3>premium</h3>
-          <ul class="services-list">
-            <li class="services">Home Page</li>
-            <li class="services">Contact form</li>
-            <li class="services">8 content pages</li>
-            <li class="services">Mobile friendly</li>
-          </ul>
-          <div class="price-box">
-            <p>From: <span class="price">N&dollar;7000</span></p>
-          </div>
+        <div class="services-contact-box">
+          <p>need something else?</p>
+          <a href="#" class="contact-btn services-contact-btn">contact me</a>
         </div>
       </div>
-      <p>need something else?</p>
-      <a href="#" class="contact-btn">contact me</a>
+    </section>
+    <!-- /////////////////////////////////// -->
+    <!-- Work section -->
+    <!-- /////////////////////////////////// -->
+
+    <section class="section-work">
+      <h3 class="work-heading">my recent work</h3>
+
+      <div class="work-grid grid grid--2-cols container">
+        <div class="site-img">
+          <a target="_blank" href="https://quintinpearson.github.io/Candyshop/">
+            <img
+              width="300"
+              height="300"
+              src="img/recent-1 (1).png"
+              alt="The museum of candy website displayed on a laptop"
+            />
+          </a>
+        </div>
+        <div class="site-description-box">
+          <a target="_blank" href="https://quintinpearson.github.io/Candyshop/">
+            <img src="img/candy-logo.png" alt="The Museum of candy logo"
+          /></a>
+          <p class="site-description">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, optio?
+            Sequi, quia.
+          </p>
+        </div>
+        <div class="site-description-box">
+          <a
+            href="https://quintinpearson.github.io/online-delivery/"
+            target="_blank"
+          >
+            <img
+              src="img/omnifood-logo.png"
+              alt="Omnifood's logo"
+              width="430"
+              height="57"
+            />
+          </a>
+          <p class="site-description">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, optio?
+            Sequi, quia.
+          </p>
+        </div>
+        <div class="site-img">
+          <a
+            href="https://quintinpearson.github.io/online-delivery/"
+            target="_blank"
+          >
+            <img
+              width="300"
+              height="300"
+              src="img/recent-2 (1).png"
+              alt="The Omnifood website displayed on a laptop"
+            />
+          </a>
+        </div>
+        <div class="site-img">
+          <a href="https://boldcollection.co/" target="_blank">
+            <img
+              width="300"
+              height="300"
+              src="img/recent-1 (1).png"
+              alt="The museum of candy website displayed on a laptop"
+          /></a>
+        </div>
+        <div class="site-description-box">
+          <a href="https://boldcollection.co/" target="_blank">
+            <img
+              src="img/bold-logo.webp"
+              alt="Bold Collection's logo"
+              width="227"
+              height="200"
+          /></a>
+          <p class="site-description">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, optio?
+            Sequi, quia.
+          </p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
