--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- script -->
+
+    <script src="script.js"></script>
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
@@ -189,8 +192,8 @@
             <img src="img/candy-logo.png" alt="The Museum of candy logo"
           /></a>
           <p class="site-description">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, optio?
-            Sequi, quia.
+            Based on the idea of The Selfie Room, Museum of candy is a venue to
+            hire, built with html css and bootstrap.
           </p>
         </div>
         <div class="site-description-box">
@@ -206,8 +209,9 @@
             />
           </a>
           <p class="site-description">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, optio?
-            Sequi, quia.
+            Omnifood is an AI powered food subscription that will make you eat
+            healthy again, 365 days per year. It's tailored to your personal
+            taste and nutritional needs.
           </p>
         </div>
         <div class="site-img">
@@ -227,8 +231,8 @@
           <a href="https://boldcollection.co/" target="_blank">
             <img
               width="300"
-              height="300"
-              src="img/recent-1 (1).png"
+              height="175"
+              src="img/recent-3.webp"
               alt="The museum of candy website displayed on a laptop"
           /></a>
         </div>
@@ -241,10 +245,148 @@
               height="200"
           /></a>
           <p class="site-description">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, optio?
-            Sequi, quia.
+            Bold is a proudly Namibian based graphic design agency. Our goals
+            are to personally and uniquely shape each project to perfectly fit
+            our clients' brief.
           </p>
         </div>
+      </div>
+    </section>
+    <!-- /////////////////////////////////// -->
+    <!-- Testimonial section -->
+    <!-- /////////////////////////////////// -->
+    <section class="section-testimonials">
+      <div class="carousel">
+        <div class="testimonial">
+          <div class="slide-row" id="slide">
+            <div class="slide-col">
+              <div class="testimonial-client">
+                <p class="testimonial-author">Alicia</p>
+                <img
+                  width="260"
+                  height="230"
+                  class="testimonial-img"
+                  src="img/bold-logo.webp"
+                  alt=" Bold collection logo"
+                />
+                <p class="testimonial-company">Bold</p>
+              </div>
+              <blockquote class="-box">
+                <p class="testimonial-text">
+                  " Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Tempore earum, neque sint, voluptatum vero, corporis quas
+                  recusandae nostrum quae nemo accusamus quis."
+                </p>
+              </blockquote>
+            </div>
+            <div class="slide-col">
+              <div class="testimonial-client">
+                <p class="testimonial-author">Chantelle</p>
+                <img
+                  width="260"
+                  height="230"
+                  class="testimonial-img"
+                  src="img/bold-logo.webp"
+                  alt=" Bold collection logo"
+                />
+                <p class="testimonial-company">Chantelle Pearso Inc.</p>
+              </div>
+              <blockquote class="testimonial-box">
+                <p class="testimonial-text">
+                  " Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Tempore earum, neque sint, voluptatum vero, corporis quas
+                  recusandae nostrum quae nemo accusamus quis."
+                </p>
+              </blockquote>
+            </div>
+            <div class="slide-col">
+              <div class="testimonial-client">
+                <p class="testimonial-author">Jan Pierewiet</p>
+                <img
+                  width="260"
+                  height="230"
+                  class="testimonial-img"
+                  src="img/bold-logo.webp"
+                  alt=" Bold collection logo"
+                />
+                <p class="testimonial-company">Big Business</p>
+              </div>
+              <blockquote class="testimonial">
+                <p class="testimonial-text">
+                  " Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Tempore earum, neque sint, voluptatum vero, corporis quas
+                  recusandae nostrum quae nemo accusamus quis."
+                </p>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="indicator">
+          <span class="carousel-btn active"></span>
+          <span class="carousel-btn"></span>
+          <span class="carousel-btn"></span>
+        </div>
+        <button class="btn btn--left">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="btn-icon"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M15 19l-7-7 7-7"
+            />
+          </svg>
+        </button>
+        <button class="btn btn--right">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="btn-icon"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M9 5l7 7-7 7"
+            />
+          </svg>
+        </button>
+      </div>
+    </section>
+
+    <!-- /////////////////////////////////// -->
+    <!-- about section -->
+    <!-- /////////////////////////////////// -->
+
+    <section class="section-about">
+      <div class="about-img-box">
+        <img
+          class="about-img"
+          width="300"
+          height="300"
+          src="img/recent-1 (1).png"
+          alt=""
+        />
+      </div>
+      <div class="about">
+        <h3 class="about-heading">Hi, I'm Quintin Pearson</h3>
+        <p class="about-text">
+          I am an active tech enthusiast and enjoy all that the industry has to
+          provide. I have worked as a support technician for a few years and
+          then moved on to web development. Although I love this industry, I am
+          no robot, some of my favourite things to do are cooking, gardening and
+          cycling. A good way to end any of these activities is with an ice-cold
+          beer!
+        </p>
+        <span class="quote">"The only failure is not trying" </span>
+        <p class="quote-author">Robin Sharma</p>
       </div>
     </section>
   </body>
