--- a/index.html
+++ b/index.html
@@ -396,11 +396,13 @@
     <!-- /////////////////////////////////// -->
 
     <footer class="footer">
-      <img
-        src="img/logo-2.png"
-        alt="Quintin Pearson's logo"
-        class="logo footer-logo"
-      />
+      <a href="#">
+        <img
+          src="img/logo-2.png"
+          alt="Quintin Pearson's logo"
+          class="logo footer-logo"
+        />
+      </a>
       <ul class="footer-nav-list">
         <li class="footer-nav-link">
           <a href="#" aria-label="Facebook link"
