hover animations added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           a creative freelancer &amp; web developer
         </p>
         <div class="hero-btn-box">
-          <a href="#" class="work-btn">view my work</a>
+          <a href="#work" class="work-btn">view my work</a>
           <a href="#" class="contact-btn">contact me</a>
         </div>
       </div>
