mobile navigation started

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="queries.css" />
 
     <title>Quintin &mdash; A Portfolio</title>
   </head>
@@ -176,7 +177,10 @@
         </div>
         <div class="site-description-box">
           <a target="_blank" href="https://quintinpearson.github.io/Candyshop/">
-            <img src="img/candy-logo.png" alt="The Museum of candy logo"
+            <img
+              class="work-logos"
+              src="img/candy-logo.png"
+              alt="The Museum of candy logo"
           /></a>
           <p class="site-description">
             Based on the idea of The Selfie Room, Museum of candy is a venue to
@@ -189,6 +193,7 @@
             target="_blank"
           >
             <img
+              class="work-logos"
               src="img/omnifood-logo.png"
               alt="Omnifood's logo"
               width="430"
@@ -226,6 +231,7 @@
         <div class="site-description-box">
           <a href="https://boldcollection.co/" target="_blank">
             <img
+              class="work-logos"
               src="img/bold-logo.webp"
               alt="Bold Collection's logo"
               width="227"
@@ -406,22 +412,34 @@
       <ul class="footer-nav-list">
         <li class="footer-nav-link">
           <a href="#" aria-label="Facebook link"
-            ><img src="/img/facebook-icon.svg" alt="facebooks icon"
+            ><img
+              class="social-icon"
+              src="/img/facebook-icon.svg"
+              alt="facebooks icon"
           /></a>
         </li>
         <li class="footer-nav-link">
           <a href="#" aria-label="instagram link"
-            ><img src="/img/instagram-icon.svg" alt="Instagrams icon"
+            ><img
+              class="social-icon"
+              src="/img/instagram-icon.svg"
+              alt="Instagrams icon"
           /></a>
         </li>
         <li class="footer-nav-link">
           <a href="#" aria-label="LinkdInn link"
-            ><img src="/img/linkedinn-icon.svg" alt="linkedinns icon"
+            ><img
+              class="social-icon"
+              src="/img/linkedinn-icon.svg"
+              alt="linkedinns icon"
           /></a>
         </li>
         <li class="footer-nav-link">
           <a href="#" aria-label="github link"
-            ><img src="/img/github-icon.svg" alt="githubs icon"
+            ><img
+              class="social-icon"
+              src="/img/github-icon.svg"
+              alt="githubs icon"
           /></a>
         </li>
       </ul>
