--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>Quintin &mdash; A Portfolio</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img
           src="img/logo-2.png"
