contact form added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
           <li><a href="#about" class="main-nav-link">about</a></li>
           <li><a href="#work" class="main-nav-link">portfolio</a></li>
           <li><a href="#expertise" class="main-nav-link">services</a></li>
-          <li><a href="#" class="contact-btn">contact me</a></li>
+          <li>
+            <a href="contact.html" target="_blank" class="contact-btn"
+              >contact me</a
+            >
+          </li>
         </ul>
       </nav>
 
