Fixed links not working

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Contact Quintin</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header class="header">
+      <a href="index.html">
+        <img
+          src="img/logo-2.png"
+          alt="Quintin Pearson's Logo"
+          class="logo"
+          width="24"
+          height="24"
+        />
+      </a>
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li><a href="index.html#about" class="main-nav-link">about</a></li>
+          <li><a href="#work" class="main-nav-link">portfolio</a></li>
+          <li><a href="#expertise" class="main-nav-link">services</a></li>
+          <li><a href="/contact.html" target="_blank"></a></li>
+        </ul>
+      </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
+    </header>
+
     <section class="contact-section">
       <div class="contact-container">
         <form
