--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
           <li><a href="#about" class="main-nav-link">about</a></li>
           <li><a href="#work" class="main-nav-link">portfolio</a></li>
           <li><a href="#expertise" class="main-nav-link">services</a></li>
-          <li>
-            <a href="contact.html" target="_blank" class="contact-btn"
-              >contact me</a
-            >
-          </li>
+          <li><a href="#services" target="_blank"></a></li>
         </ul>
       </nav>
 
@@ -71,7 +67,7 @@
         </p>
         <div class="hero-btn-box">
           <a href="#work" class="work-btn">view my work</a>
-          <a href="#" class="contact-btn">contact me</a>
+          <a href="contact.html" class="contact-btn">contact me</a>
         </div>
       </div>
     </section>
@@ -121,6 +117,7 @@
     <section class="section-services">
       <div class="container services-box">
         <h2 class="services-heading">services &mdash; plans for everyone</h2>
+        <h3 class="services-other">Web Development</h3>
         <div class="services-grid grid grid--3-cols">
           <div class="services-items">
             <h3>basic</h3>
@@ -160,9 +157,51 @@
             </ul>
           </div>
         </div>
+        <h3 class="services-other services-more">Other Services</h3>
+        <div class="services-grid grid grid--3-cols">
+          <div class="services-items">
+            <h3>IT support</h3>
+            <div class="price-box">
+              <p>per hour: <span class="price">N&dollar;200</span></p>
+            </div>
+
+            <ul class="services-list">
+              <li class="services">consulting</li>
+              <li class="services">hardware</li>
+              <li class="services">software</li>
+              <li class="services">general setup</li>
+            </ul>
+          </div>
+          <div class="services-items">
+            <h3>web design</h3>
+            <div class="price-box">
+              <p>per hour: <span class="price">N&dollar;350</span></p>
+            </div>
+            <ul class="services-list">
+              <li class="services">Home Page</li>
+              <li class="services">Contact forms</li>
+              <li class="services">content pages</li>
+              <li class="services">Mobile versions</li>
+            </ul>
+          </div>
+          <div class="services-items">
+            <h3>contact</h3>
+            <div class="price-box">
+              <p>Starting at: <span class="price">free</span></p>
+            </div>
+            <ul class="services-list">
+              <li class="services">Unsure about something?</li>
+              <li class="services">A specific service you need?</li>
+              <li class="services">Need advice?</li>
+              <li class="services">Need an Estimate?</li>
+            </ul>
+          </div>
+        </div>
         <div class="services-contact-box">
           <p>need something else?</p>
-          <a href="#" class="contact-btn services-contact-btn">contact me</a>
+          <a href="contact.html" class="contact-btn services-contact-btn"
+            >contact me</a
+          >
         </div>
       </div>
     </section>
@@ -420,7 +459,9 @@
       </a>
       <ul class="footer-nav-list">
         <li class="footer-nav-link">
-          <a href="#" aria-label="Facebook link"
+          <a
+            href="https://www.facebook.com/FreelanceITnam/"
+            aria-label="Facebook link"
             ><img
               class="social-icon"
               src="/img/facebook-icon.svg"
@@ -436,7 +477,9 @@
           /></a>
         </li>
         <li class="footer-nav-link">
-          <a href="#" aria-label="LinkdInn link"
+          <a
+            href="https://www.linkedin.com/in/quintin-pearson-9641991ab/"
+            aria-label="LinkdInn link"
             ><img
               class="social-icon"
               src="/img/linkedinn-icon.svg"
@@ -444,7 +487,7 @@
           /></a>
         </li>
         <li class="footer-nav-link">
-          <a href="#" aria-label="github link"
+          <a href="https://github.com/QuintinPearson" aria-label="github link"
             ><img
               class="social-icon"
               src="/img/github-icon.svg"
