--- a/contact.html
+++ b/contact.html
@@ -75,6 +75,66 @@
 
       <div id="status"></div>
     </section>
+
+    <!-- /////////////////////////////////// -->
+    <!-- footer section -->
+    <!-- /////////////////////////////////// -->
+
+    <footer class="footer">
+      <a href="index.html">
+        <img
+          src="img/logo-2.png"
+          alt="Quintin Pearson's logo"
+          class="logo footer-logo"
+        />
+      </a>
+      <ul class="footer-nav-list">
+        <li class="footer-nav-link">
+          <a
+            href="https://www.facebook.com/FreelanceITnam/"
+            aria-label="Facebook link"
+            ><img
+              class="social-icon"
+              src="/img/facebook-icon.svg"
+              alt="facebooks icon"
+          /></a>
+        </li>
+        <li class="footer-nav-link">
+          <a href="#" aria-label="instagram link"
+            ><img
+              class="social-icon"
+              src="/img/instagram-icon.svg"
+              alt="Instagrams icon"
+          /></a>
+        </li>
+        <li class="footer-nav-link">
+          <a
+            href="https://www.linkedin.com/in/quintin-pearson-9641991ab/"
+            aria-label="LinkdInn link"
+            ><img
+              class="social-icon"
+              src="/img/linkedinn-icon.svg"
+              alt="linkedinns icon"
+          /></a>
+        </li>
+        <li class="footer-nav-link">
+          <a href="https://github.com/QuintinPearson" aria-label="github link"
+            ><img
+              class="social-icon"
+              src="/img/github-icon.svg"
+              alt="githubs icon"
+          /></a>
+        </li>
+      </ul>
+      <a class="mail-link" href="mailto:quintin@quintinpearson.com"
+        >quintin@quintinpearson.com</a
+      >
+      <p class="copyright">
+        copyright &copy;
+        <span class="year"> 2100</span> &mdash;Quintin Pearson
+      </p>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
