--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             </div>
             <div class="slide-col">
               <div class="testimonial-client">
-                <p class="testimonial-author">Chantelle</p>
+                <p class="testimonial-author">Alicia</p>
                 <img
                   width="260"
                   height="230"
@@ -344,13 +344,17 @@
                   src="img/bold-logo.webp"
                   alt=" Bold collection logo"
                 />
-                <p class="testimonial-company">Chantelle Pearso Inc.</p>
+                <p class="testimonial-company">Bold</p>
               </div>
               <blockquote class="testimonial-box">
                 <p class="testimonial-text">
-                  " Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Tempore earum, neque sint, voluptatum vero, corporis quas
-                  recusandae nostrum quae nemo accusamus quis."
+                  "Quintin was such a pleasure to work with. He understood my
+                  brief and executed it perfectly. I needed someone to bring my
+                  designs to life and Quintin did just that with my beautiful
+                  website. He made the process look so easy and he completed the
+                  project swiftly. He’s the kind of developer you can trust with
+                  your project from start to finish. I look forward to working
+                  with him again in the near future."
                 </p>
               </blockquote>
             </div>
@@ -495,6 +499,9 @@
           /></a>
         </li>
       </ul>
+      <a class="mail-link" href="mailto:quintin@quintinpearson.com"
+        >quintin@quintinpearson.com</a
+      >
       <p class="copyright">
         copyright &copy;
         <span class="year"> 2100</span> &mdash;Quintin Pearson
