--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
               <p>Starting at: <span class="price">N&dollar;7000</span></p>
             </div>
             <ul class="services-list">
+              <li class="services">Blog</li>
               <li class="services">Home Page</li>
               <li class="services">Contact form</li>
               <li class="services">5 content pages</li>
@@ -152,6 +153,7 @@
               <p>Starting at: <span class="price">N&dollar;13000</span></p>
             </div>
             <ul class="services-list">
+              <li class="services">Blog</li>
               <li class="services">Home Page</li>
               <li class="services">Contact form</li>
               <li class="services">8 content pages</li>
