--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact Quintin</title>
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="contact.css" />
   </head>
   <body>
     <header class="header">
@@ -14,7 +15,7 @@
         <img
           src="img/logo-2.png"
           alt="Quintin Pearson's Logo"
-          class="logo"
+          class="logo logo--contact-pg"
           width="24"
           height="24"
         />
