--- a/contact/contact.html
+++ b/contact/contact.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="index.html">
+      <a href="/index.html">
         <img
           src="/img/logo-2.webp"
           alt="Quintin Pearson's Logo"
@@ -32,9 +32,13 @@
       </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a href="index.html#about" class="main-nav-link">about</a></li>
-          <li><a href="#work" class="main-nav-link">portfolio</a></li>
-          <li><a href="#expertise" class="main-nav-link">services</a></li>
+          <li><a href="/index.html#about" class="main-nav-link">about</a></li>
+          <li>
+            <a href="/index.html#work" class="main-nav-link">portfolio</a>
+          </li>
+          <li>
+            <a href="/index.html#expertise" class="main-nav-link">services</a>
+          </li>
           <li><a href="/contact.html" target="_blank"></a></li>
         </ul>
       </nav>
@@ -92,7 +96,7 @@
     <!-- /////////////////////////////////// -->
 
     <footer class="footer">
-      <a href="index.html">
+      <a href="/index.html">
         <img
           src="/img/logo-2.webp"
           alt="Quintin Pearson's logo"
